--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -98,6 +98,22 @@
           <div *ngIf="registerForm.get('collateralAvailable')?.touched && registerForm.get('collateralAvailable')?.invalid" class="text-red-500 text-xs mt-1">
             Collateral information is required
           </div>
+
+          <!-- customer Since -->
+          <div class="flex items-center border-2 py-2 px-3 rounded-md">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5z" />
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5z" />
+            </svg>
+            <input 
+              class="pl-2 outline-none border-none w-full" 
+              type="date" 
+              formControlName="customerSince"
+            />
+          </div>
+          <div *ngIf="registerForm.get('customerSince')?.touched && registerForm.get('customerSince')?.invalid" class="text-red-500 text-xs mt-1">
+            Customer since is required
+          </div>
         </div>
 
         <button 
