--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -3,6 +3,9 @@
     <div class="bg-white px-10 py-8 rounded-xl w-screen shadow-xl max-w-sm">
       <div class="space-y-4">
         <h1 class="text-center text-2xl font-semibold text-gray-600">Login</h1>
+        <div *ngIf="loginError.trim.length > 0" class="text-red-500 text-sm">
+          {{ loginError }}
+        </div>        
         <hr>
         <div class="flex items-center border-2 py-2 px-3 rounded-md mb-4">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
